--- a/deploy-to-evennode.yml
+++ b/deploy-to-evennode.yml
@@ -1,4 +1,4 @@
-# This workflow will automatically deploy your application to www.evennode.com on push to master branch.
+# This workflow ill automatically deploy your application to www.evennode.com on push to master branch.
 
 name: Deploy to EvenNode
 
