--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,36 @@
-# This workflow will automatically deploy your application to www.evennode.com on push to main branch.
-
-
-name: Deploy to EvenNode
+name: Build, test and lint
 
 on:
   push:
-    branches: [ main ]
+    branches: [master, main]
 
 jobs:
-  Deploy:
-    runs-on: ubuntu-latest
 
-    steps:
-    - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
-      with:
-        key: ${{ secrets.SSH_KEY }}
-        known_hosts: " "
-    - name: Add git.evennode.com to known_hosts
-      run: |
-        ssh-keyscan -H git.evennode.com > ~/.ssh/known_hosts
+  build:
+    runs-on: ubuntu-latest
+      steps:
     - uses: actions/checkout@v2
+    
+    - name: Setup Go
+      uses: actions/setup-go@v2
       with:
-        fetch-depth: 0
-    - name: Deploy to evennode.com
+        go-version: '1.17.0' 
+    
+    - name: Install dependencies
       run: |
-        git remote add evennode ${{ secrets.EVENNODE_REPO_URL }}
-        git config --global user.email "${{ secrets.GIT_EMAIL }}"
-        git config --global user.name "${{ secrets.GIT_NAME }}"
-        git push evennode +main
+        pip install -r requirements.txt
+        go version
+        go get -u golang.org/x/lint/golint
+        
+    - name: Run build
+      run: go build . 
+      
+    # Run vet & lint on the code
+    - name: Run vet & lint
+      run: |
+        go vet .
+        golint .
+    
+    # Run testing on the code
+    - name: Run testing
+      run: go test -v
