--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 exchange-calendars==4.2.8
 Flask==2.3.2
 korean-lunar-calendar==0.3.1
-numpy==1.24.4
+numpy
 pandas==2.0.3
 pandas-market-calendars==4.1.4
-pandas-ta==0.3.14b0
+git+https://github.com/twopirllc/pandas-ta
 PyDrive==1.3.1
 pyotp==2.9.0
 python-dateutil==2.8.2
