--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
     name: Hello world
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies
+      run: 
+        pip install -r requirements.txt
+
     - name: Check-out devops repository
       uses: actions/checkout@v2
       with:
