--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 exchange-calendars==4.2.8
 Flask==2.3.2
 korean-lunar-calendar==0.3.1
-
+setuptools
 numpy
 pandas==2.0.3
 pandas-market-calendars==4.1.4
